examples/invalid/unquoted_keyword_key.jasn
// Keywords cannot be used as unquoted keys
{
  null: "this should fail"
}
